Add new specific tag 'wp.plugins.ewww'

--- a/ansible/roles/wordpress-instance/tasks/main.yml
+++ b/ansible/roles/wordpress-instance/tasks/main.yml
@@ -159,6 +159,7 @@
     - wp.plugins.wpforms-surveys-polls
     - wp.plugins.cachecontrol
     - wp.plugins.payonline
+    - wp.plugins.ewww
     - wp.plugins.ewww.optimize
     - wp.plugins.ewww.configure
     - wp.plugins.intranet
