[breaking] Use Jenkins from an immutable deployment policy
- Instead of keeping the entire `/var/lib/jenkins` as mutable state, keep only `/var/lib/jenkins/jobs` (given that `openshift/origin-jenkins` has support for copying stuff from `/opt/openshift` into `/var/lib/jenkins` as part of its entry point)

--- a/ansible/roles/wordpress-openshift-namespace/tasks/continuous-integration.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/continuous-integration.yml
@@ -157,8 +157,9 @@
                 limits:
                   memory: 2Gi
               volumeMounts:
-              - mountPath: /var/lib/jenkins
+              - mountPath: /var/lib/jenkins/jobs
                 name: jenkins-data
+                subPath: jobs
           securityContext: {}
           serviceAccount: jenkins
           serviceAccountName: jenkins
