--- a/ansible/roles/wordpress-openshift-namespace/tasks/continuous-integration.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/continuous-integration.yml
@@ -21,12 +21,18 @@
   register: _jenkins_build
 
 - name: "Rebuild Jenkins images now"
-  when: _jenkins_build is changed
+  when: |
+    (
+    _jenkins_build is changed
+    or
+    ("ci.rebuild" in ansible_run_tags)
+    )
   shell: "oc -n {{ openshift_namespace }} start-build --wait {{ item }}"
   delegate_to: localhost
   with_items:
     - "{{ ci_jenkins_master_image_name }}"
     - "{{ ci_jenkins_test_sidekick_image_name }}"
+  tags: ci.rebuild
 
 # This ImageStream is intended as a so-called "Kubernetes plug-in pod
 # template", that the Jenkinsfile can reference (or inheritFrom, in
