[fix] Also mount `logs`
... So that we can keep a persistent build history

--- a/ansible/roles/wordpress-openshift-namespace/tasks/continuous-integration.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/continuous-integration.yml
@@ -166,6 +166,9 @@
               - mountPath: /var/lib/jenkins/jobs
                 name: jenkins-data
                 subPath: jobs
+              - mountPath: /var/lib/jenkins/logs
+                name: jenkins-data
+                subPath: logs
           securityContext: {}
           serviceAccount: jenkins
           serviceAccountName: jenkins
