--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -17,7 +17,7 @@ http {
         ssl_certificate    /etc/nginx/ssl/server.cert;
         ssl_certificate_key    /etc/nginx/ssl/server.key;
 
-        root /srv/test/$host/htdocs;
+        root /srv/www/$host/htdocs;
 
         # All the PHP traffic goes through a single entry point. This
         # avoids stat()s on NFS when we know (through regexes below)
