--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -10,6 +10,7 @@
         - images
   tags:
     - images
+    - images.secret
     - images.promote
 
 - name: "DeploymentConfigs (previously known as pods) and Services"
