[feature] `parse_external_docker_tag` filter
Lifted from https://github.com/epfl-si/PhDAssess/blob/master/ansible/roles/epfl.phd-assess/filter_plugins/parse_external_docker_tag.py

--- a/ansible/roles/wordpress-openshift-namespace/tasks/images.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/images.yml
@@ -58,6 +58,7 @@
     _oc_secrets_link
     and
     ( "ALREADY_LINKED" not in _oc_secrets_link.stdout )
+  tags: images.secret
 
 - name: "Testing ImageStreams and their build information"
   when: not openshift_is_production
