Revert "[WIP] Set the ubuntu image to use the one in OC"
This reverts commit 91fb03c03a2f253b02b32de40534a1e6160a27f7.

--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker-registry.default.svc:5000/wwp-test/ubuntu:focal
+FROM ubuntu:focal
 
 # Version pins are defined here:
 ENV PHP_VERSION=7.4
