[feature] Cloud *and* manual mirroring of `ubuntu:focal`
Sadly, we can no longer just do an `ImageStreamTag` that has `from:` → `kind: DockerImage` and `name: 'docker.io/library/ubuntu:focal'`, because that image (as of early 2023) now has an OCI-only header. (Details below) Therefore, also add a `-t images.mirror.refresh` to manually upload new upstream images into the OpenShift registry, using the operator workstation as a relay.

----

If we don't do the above (or run the configuration-as-code with `--skip-tags=images.mirror.refresh`), here is the error message we get (somewhere below the `ImageStream`'s `status:` field):

```
          message: 'dockerimage.image.openshift.io "library/ubuntu:focal" not found'
          reason: NotFound

```

Investigating with the following Curl script (password is not the real one),

```

UNAME=epflwpbot
UPASS=REDACTED

PARAMS="service=registry.docker.io&scope=repository:library/ubuntu:pull"
TOKEN=$(curl --user "$UNAME:$UPASS" \
    "https://auth.docker.io/token?$PARAMS" \
    | jq -r '.token'
)

for tag in focal focal-20221130; do
    curl -s -H "Authorization: Bearer ${TOKEN}" https://registry-1.docker.io/v2/library/ubuntu/manifests/$tag | jq .
done

```

reveals that the former (`focal`) is in OCI format only; i.e. the response reads

```
{
  "errors": [
    {
      "code": "MANIFEST_UNKNOWN",
      "message": "OCI index found, but accept header does not support OCI indexes"
    }
  ]
}
```

which (apparently for upward “compatibility”) is flagged as `MANIFEST_UNKNOWN`, which OpenShift 3.11 dutifully renders as a `NotFound` error.

--- a/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/main.yml
@@ -11,6 +11,8 @@
   tags:
     - images
     - images.secret
+    - images.mirror
+    - images.mirror.refresh
     - images.promote
 
 - name: "DeploymentConfigs (previously known as pods) and Services"
