--- a/ansible/roles/wordpress-openshift-namespace/tasks/images.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/images.yml
@@ -60,6 +60,56 @@
     ( "ALREADY_LINKED" not in _oc_secrets_link.stdout )
   tags: images.secret
 
+- name: "Pull upstream {{ wp_base_base_image.qualified }} image into {{ wp_base_base_image.mirrored }}"
+  when: not openshift_is_production
+  openshift_imagestream:
+    metadata:
+      name: "{{ wp_base_base_image.shortname }}"
+      namespace: "{{ openshift_namespace }}"
+    from:
+      kind: DockerImage
+      name: "{{ wp_base_base_image.qualified }}"
+    tag: "{{ wp_base_base_image.tag }}"
+  tags: images.mirror
+
+# Unfortunately, that is not enough. `ubuntu:focal-20221130` is the
+# latest image in the `ubuntu:focal` lineage with an “old” (so-called
+# Docker v2) layer index; starting at `ubuntu:focal-20230126`, the
+# image is in OCI format, which only OpenShift versions 4.7 and above
+# can consume (see https://access.redhat.com/solutions/4933011). This
+# fact was checked today with a couple of curl API calls; see commit
+# message for details. The current workaround is below: use the
+# operator workstation to do a `docker pull` / `docker push` sequence.
+
+- name: "`docker pull {{ wp_base_base_image.qualified }}`"
+  connection: local
+  docker_image:
+    source: pull
+    name: "{{ wp_base_base_image.qualified }}"
+    repository: "{{ wp_base_base_image_manually_push_to }}"
+  tags:
+  - images.mirror
+  - images.mirror.refresh
+
+- name: "`docker login` into OpenShift"
+  changed_when: false
+  shell:
+    cmd: |
+      docker login os-docker-registry.epfl.ch -u quatrava -p "$(oc whoami -t)"
+  tags:
+  - images.mirror
+  - images.mirror.refresh
+
+- name: "`docker push` {{ wp_base_base_image.qualified }} into OpenShift"
+  connection: local
+  docker_image:
+    name: "{{ wp_base_base_image_manually_push_to }}"
+    push: true
+    source: local
+  tags:
+  - images.mirror
+  - images.mirror.refresh
+
 - name: "Testing ImageStreams and their build information"
   when: not openshift_is_production
   openshift_imagestream:
