[fix] Build from `ubuntu:focal` again
- It is now synced (albeit clumsily) from upstream, as per the previous commits
- Using `FROM ubuntu:local` lets wp-dev do the right thing
- We also need to put OpenShift `FROM`-rewriting logic (https://docs.openshift.com/container-platform/3.11/dev_guide/builds/build_strategies.html#docker-strategy-from) into motion

💡 This change requires you to invalidate your suitcase, because it exercises a bug in `epfl_si.ansible_module_openshift` (fixed by https://github.com/epfl-si/ansible-module-openshift/commit/1405a6d5816f785d3d6a2e65f3974bf21434a8e8 and https://github.com/epfl-si/ansible-module-openshift/commit/0107e1bbf1c9e6977b50bb673384d0b55f531103 )

--- a/ansible/roles/wordpress-openshift-namespace/tasks/images.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/images.yml
@@ -116,7 +116,6 @@
     name: "{{ item.name }}"
     namespace: "{{ openshift_namespace }}"
     metadata: "{{ item.metadata | default({}) }}"
-    from: "{{ item.from | default(None) }}"
     git:
         repository: "{{ wp_ops_git_uri }}"
         path: "{{ item.git_path }}"
@@ -127,6 +126,10 @@
       git_path: docker/wp-base
       strategy:
         dockerStrategy:
+          # See above - We have our own mirror of `ubuntu:focal`
+          from:
+             kind: "ImageStreamTag"
+             name: "{{ wp_base_base_image.shortname }}:{{ wp_base_base_image.tag }}"
           forcePull: true
           noCache: true
           buildArgs:
