update max-age for all 200 to keep only one max-age

--- a/docker/httpd/apache2.conf
+++ b/docker/httpd/apache2.conf
@@ -40,7 +40,7 @@ LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
 
 Header always set Cache-Control "max-age=129601, public" "expr=%{REQUEST_STATUS} == 301"
-Header always set Cache-Control "max-age=86400, public" "expr=%{REQUEST_STATUS} == 200"
+Header always merge Cache-Control "max-age=86400, public" "expr=%{REQUEST_STATUS} == 200"
 <FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf)$">
   Header set Cache-Control "max-age=129600, public"
 </FilesMatch>
