--- a/docker/httpd/apache2.conf
+++ b/docker/httpd/apache2.conf
@@ -39,8 +39,10 @@ LogFormat "%h %l %u %t \"%r\" %>s %O" common
 LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
 
+
 Header always set Cache-Control "max-age=129601, public" "expr=%{REQUEST_STATUS} == 301"
-Header always merge Cache-Control "max-age=86400, public" "expr=%{REQUEST_STATUS} == 200"
+Header always unset Cache-Control "expr=%{REQUEST_STATUS} == 200"
+Header always set Cache-Control "max-age=86401, public" "expr=%{REQUEST_STATUS} == 200"
 <FilesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|js|css|swf)$">
   Header set Cache-Control "max-age=129600, public"
 </FilesMatch>
