--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -86,7 +86,7 @@ RUN set -e -x;                                                           \
             |sort -n -r |head -1) ;                                      \
         mkdir -p /wp/$version ;                                          \
         wp --allow-root --path=/wp/$version                              \
-           core download --version=$version ;                            \
+           core download --version=$version --locale=fr_FR ;             \
     done
 
 RUN rm -rf /wp/*/wp-content/plugins/akismet                              \
