Revert "Download WP in french version, so we don't get the need to update the translations from the wp-admin menu", as it breaks the default admin UI language, and don't trigger any update of the translation files
This reverts commit 25b1d91328a735e93edf3b24ace6466ee24c2e3f.

--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -86,7 +86,7 @@ RUN set -e -x;                                                           \
             |sort -n -r |head -1) ;                                      \
         mkdir -p /wp/$version ;                                          \
         wp --allow-root --path=/wp/$version                              \
-           core download --version=$version --locale=fr_FR ;             \
+           core download --version=$version ;                            \
     done
 
 RUN rm -rf /wp/*/wp-content/plugins/akismet                              \
