[refactor] Allow for a multiplicity of `triggered_by` stanzas

--- a/ansible/roles/wordpress-openshift-namespace/tasks/images.yml
+++ b/ansible/roles/wordpress-openshift-namespace/tasks/images.yml
@@ -130,7 +130,7 @@
         ref: "{{ images_build_branch }}"
     strategy: "{{ item.strategy | default({}) }}"
     triggers: >-
-      {{ [_wp_base_trigger] if (item.triggered_by_wp_base | default(False)) else [] }}
+      {{ [_triggers[item.triggered_by]] if item.triggered_by is defined else [] }}
   with_items:
     - name: "{{ wp_base_image_name }}"
       git_path: docker/wp-base
@@ -158,22 +158,22 @@
     - name: "{{ httpd_image_name }}"
       git_path: docker/httpd
       from: "{{ wp_base_image_name }}"
-      triggered_by_wp_base: true
+      triggered_by: wp-base
     - name: "{{ mgmt_image_name }}"
       git_path: docker/mgmt
       from: "{{ wp_base_image_name }}"
-      triggered_by_wp_base: true
+      triggered_by: wp-base
     - name: "{{ backup_cron_image_name }}"
       git_path: docker/cronjob
-      from: "{{ mgmt_image_name }}"
   vars:
-    _wp_base_trigger:
-      type: ImageChange
-      imageChange:
-        from:
-          kind: ImageStreamTag
-          namespace: "{{ openshift_namespace }}"
-          name: "{{ wp_base_image_name }}:latest"
+    _triggers:
+      wp-base:
+        type: ImageChange
+        imageChange:
+          from:
+            kind: ImageStreamTag
+            namespace: "{{ openshift_namespace }}"
+            name: "{{ wp_base_image_name }}:latest"
   tags: images.build
 
 - name: "Production ImageStreams"
