--- a/ansible/roles/wordpress-instance/tasks/plugins.yml
+++ b/ansible/roles/wordpress-instance/tasks/plugins.yml
@@ -149,6 +149,16 @@
   tags:
     - wp.plugins.mu
 
+- name: Jahia redirect tracker (must-use plugin)
+  wordpress_plugin:
+    name: EPFL_jahia_redirect
+    is_mu: yes
+    state:
+      - absent
+    from: https://github.com/epfl-si/wp-mu-plugins/blob/master/EPFL_jahia_redirect.php
+  tags:
+    - wp.plugins.mu
+
 - name: EPFL functions (must-use plugin)
   wordpress_plugin:
     name: epfl-functions
