[feature] bash-completion
Add the [bash-completion](https://github.com/scop/bash-completion) 
package form more comfort.

--- a/docker/wp-base/Dockerfile
+++ b/docker/wp-base/Dockerfile
@@ -15,6 +15,7 @@ RUN apt-get -qy update && \
 RUN curl -sL https://deb.nodesource.com/setup_${NODE_VERSION_MAJOR}.x | bash -
 
 RUN apt-get -qy update && apt-get  -qy install --no-install-recommends \
+    bash-completion \
     composer \
     git \
     jq \
