--- a/docker/httpd/php.ini
+++ b/docker/httpd/php.ini
@@ -9,7 +9,7 @@ realpath_cache_size = 0M
 opcache.revalidate_path = 1
 
 ;; Define the default sender as "noreply@epfl.ch" to bypass SMTP authentication
-sendmail_from = "noreply@epfl.ch"
+sendmail_from = "noreply-wwp@epfl.ch"
 
 ;; https://go.epfl.ch/INC0468760
 disable_functions = phpinfo
