added Sami to the SSH allowed list

--- a/ansible/roles/wordpress-openshift-namespace/vars/mgmt-vars.yml
+++ b/ansible/roles/wordpress-openshift-namespace/vars/mgmt-vars.yml
@@ -20,6 +20,7 @@ _mgmt_access_list_wwp_test_and_wwp:
   - lindo.duratti@epfl.ch
   - jean-francois.gonguet@epfl.ch
   - jerome.cosandey@epfl.ch
+  - sami.panseri@epfl.ch
 
 _mgmt_access_list_wwp_test_only: []
 
