[upgrade] to latest AWX version
- Fetch image from `ghcr.io`
- `/etc/tower/conf.d/credentials.py` seemingly was renamed to `/etc/tower/conf.d/database.py`
- Accomodate the “constantly rewrite receptor.conf” feature of `awx-task` the best we can. Right now (i.e. before we get into the business of running an actual `receptor` container), at least the dispatcher lasts more than 30 seconds (but less than 3 minutes), and therefore the image's internal scheduler accepts to restart it, meaning that Kubernetes is at least kept unaware (meaning, no `CrashLoopBackoff`)
- Remove most of the cargo-culted stuff in `awx-settings.py`

💡 One must run `awx-manage migrate` once from the pod's command line, so that Django migrations happen.

--- a/ansible/roles/awx-instance/tasks/k8s-builds.yml
+++ b/ansible/roles/awx-instance/tasks/k8s-builds.yml
@@ -50,18 +50,7 @@
        FROM {{ awx_base_image_mirrored_to }}
 
        USER 0
-       RUN yum -y install patch && yum -y clean all
-       # Work around “NoneType has no attribute hostname” traceback
-       RUN curl https://github.com/ansible/awx/commit/79d7c6d9b3c80aba3f9e35a8dc076355223f9c2c.patch | \
-           patch -p1 -d /var/lib/awx/venv/awx/lib/python3.6/site-packages/
-
-       # Fix (same symptom as) https://github.com/ansible-collections/community.kubernetes/issues/250
-       RUN curl https://patch-diff.githubusercontent.com/raw/ansible/ansible/pull/72131.patch | \
-           patch -p2 -d /usr/lib/python3.6/site-packages/
-
-       # Make anti-affinity work
-       RUN curl https://patch-diff.githubusercontent.com/raw/ansible/awx/pull/8487.patch | \
-           patch -p1 -d /var/lib/awx/venv/awx/lib/python3.6/site-packages/
+       # Nothing here for now...
 
        USER 1000
   tags: awx.build.awx
